# University-projects

301-Car/: README.md  Team2_Car.cywrk.dylan  report.md
301-Car/Firmware/: .gitignore  ComponentUpdateLog.txt  Team2_Car.cywrk  Team2_Car.cywrk.bcla154
301-Car/Firmware/Team2_Car.cydsn/: Team2_Car.cydwr  Team2_Car.cyfit  Team2_Car.cyprj  Team2_Car.cyprj.bcla154  Team2_Car.rpt  Team2_Car_timing.html  (+9 more)
301-Car/Matlab Scripts/: highPassFilter.m  lowPassFilter.m
301-Car/Software/: turning_car.c
ASL-Recognition/: README.md  requirements.txt
ASL-Recognition/docs/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
ASL-Recognition/src/: main.py
COMPSYS701/: README.md
COMPSYS701/GroupAssignment/: DE1-SoC.sdc  Nios_System_4.qsys  Nios_System_4.sopcinfo  Readme.md  TopLevel.qsf  noc.qpf  run_tb.bat  run_tb.sh  transcript  vsim.wlf  wave.do
COMPSYS723/: readme.txt
COMPSYS723/A1/: A1.qpf  A1.qsf
FlappyBird-VHDL/: FlappyBird.qpf  README.md  game.qsf  game_assignment_defaults.qdf
FlappyBird-VHDL/src/: ConstantValues.vhdl  FlappyBird.vhdl  RGBValues.vhdl  Rectangle.vhdl  TCGROM.MIF  bird.vhd  game.vhd  ground.vhd  level.vhd  levelOut.vhdl  lfsr.vhd  lives.vhd  menu.vhdl  menubutton.vhdl  mouse.vhd  obstacles.vhd  pipe.vhd  powerup.vhd  score.vhd  sevenSeg.vhd  sprite.vhd  string.vhd  vga_sync.vhd
FlappyBird-VHDL/test/: testlfsr.vhd
FlappyBird-VHDL/work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
Pacemaker/: README.md  heart meanings.txt  testRunner.py
Pacemaker/SCcharts/: .gitignore  .project
Pacemaker/inc/: chart.h  cimp.h  defines.h  inputs.h  outputs.h  state.h
Pacemaker/src/: chart.c  cimp.c  inputs.c  main.c  outputs.c  state.c
Part-IV-Project/: README.md
Part-IV-Project/range_doppler/: CMakeLists.txt  Makefile  build.sh  build_kernel.sh  transmit.sh
Part-IV-Project/range_doppler/device/: range_doppler_kernel.cl  range_doppler_kernel_all.cl  range_doppler_kernel_compute_units.cl  range_doppler_kernel_low_usage.cl  range_doppler_kernel_swi.cl  range_doppler_kernel_swi_array.cl  range_doppler_kernel_swi_array_p.cl  range_doppler_kernel_swi_cache.cl  range_doppler_kernel_swi_reduction.cl  range_doppler_kernel_swi_unroll.cl  range_doppler_kernel_swi_unroll_man.cl  range_doppler_kernel_test.cl  range_doppler_kernel_test2.cl  range_doppler_kernel_test3.cl  range_doppler_kernel_unroll.cl
Part-IV-Project/range_doppler/host/inc/: error_check.h  fft.h  opencl.h  range_doppler.h  store_data.h  vector2D.h
Part-IV-Project/range_doppler/host/src/: fft.cpp  load_data.cpp  main.cpp  opencl.cpp  range_doppler.cpp
Part-IV-Project/range_doppler_cmake/: CMakeLists.txt
Part-IV-Project/range_doppler_cmake/include/: load_data.h  range_doppler.h  vector2D.h
Part-IV-Project/range_doppler_cmake/python/: complexbin.py  parambin.py
Part-IV-Project/range_doppler_cmake/src/: load_data.cpp  main.cpp  range_doppler.cpp  store_data.cpp
Part-IV-Project/range_doppler_cmake/test/: azimuth_fft_test.cpp  azimuth_filter_test.cpp  azimyth_ifft_test.cpp  load_data_test.cpp  paramater_gen_test.cpp  rcmc_test.cpp  test_main.cpp
capstone-project-team_05/: readme.md
capstone-project-team_05/final-report/: _build.cmd
capstone-project-team_05/project/: readme.md
capstone-project-team_05/project/compsys/project-code/: CMakeLists.txt
capstone-project-team_05/project/compsys/project-code/inc/: defines.h
capstone-project-team_05/project/compsys/project-code/src/: adc.c  main.c  wifi.c
capstone-project-team_05/proposal/: .project  team_5_smart_scale_state_chart.sctx
esterel-project/: README.md
esterel-project/src/: cruiseControl.ctbl  cruiseControl.h  cruiseControl.strl  cruiseControl_data.c  cruiseRegulation.c
(+578 files in other folders)
